--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="someid">
         This is my first git project.
     </div>
+    <div>
+        This will be available in the login branch.
+    </div>
     
 </body>
 </html>
